--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@smastrom/react-rating": "^1.5.0",
+    "axios": "^1.7.9",
     "bistro-boss-resturent": "file:",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
