--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
     "bistro-boss-resturent": "file:",
     "firebase": "^11.1.0",
